# xrouter-llm

./: .gitignore  AGENTS.md  LICENSE  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  release.yml
artifacts/models/: irt_router_350k.joblib
config/: models.yaml
config/models/: claude-opus-4-8.yaml  claude-sonnet-4-6.yaml  deepseek-v4-flash.yaml  deepseek-v4-pro.yaml  google-gemini-2.5-flash-lite.yaml  google-gemini-3-flash-preview.yaml  minimax-minimax-m3.yaml  nvidia-nemotron-3-ultra-550b-a55b-free.yaml  openai-gpt-5.4-mini.yaml  openai-gpt-5.5.yaml  z-ai-glm-4.7.yaml  z-ai-glm-5.2.yaml
config/routers/: auto.yaml  cheap-pair.yaml  single-opus.yaml
docs/: algorithm.md
examples/: benchmark.jsonl  new_model_profiles.json
migrations/: env.py
scripts/: ab_capability_dims.py  ab_capability_routing.py  ab_prompt_conditioned_capability.py  benchmarks_to_collect.csv  collect_pricepertoken_benchmarks.py  export_collected_benchmark_profiles.py  probe_qwen_difficulty.py
src/xrouter_llm/: __init__.py  agentic.py  catalog.py  cli.py  data.py  encoders.py  evaluation.py  features.py  fusion.py  irt_router.py  llmrouterbench.py  model_aware_predictor.py  paths.py  policy.py  predictor_utils.py  profiles.py  prompt_conditioned_irt.py  router.py  routerbench.py  score.py  server.py  serving.py  store.py  types.py  xagent_labels.py
src/xrouter_llm/migrations/: env.py  script.py.mako
src/xrouter_llm/migrations/versions/: 0001_initial_calls_table.py  0002_add_feedback_column.py  0003_add_user_id.py  0004_dedupe_prompt_text.py
src/xrouter_llm/resources/: routerbench_public_benchmarks.json
src/xrouter_llm/resources/config/models/: claude-sonnet-4-6.yaml  claude-sonnet-5.yaml  deepseek-v4-flash.yaml  google-gemini-3.1-flash-lite.yaml  google-gemini-3.1-pro-preview.yaml  google-gemini-3.5-flash.yaml  moonshotai-kimi-k2.7-code.yaml  moonshotai-kimi-k3.yaml  z-ai-glm-5.2.yaml
src/xrouter_llm/resources/config/routers/: auto.yaml  cheap-pair.yaml  quality-pair.yaml
src/xrouter_llm/resources/models/: irt_router_350k.joblib
tests/: conftest.py  test_agentic.py  test_alembic.py  test_encoders.py  test_irt_router.py  test_llmrouterbench.py  test_model_holdout_and_cost.py  test_policy.py  test_predictor.py  test_profiles.py  test_profiles_and_model_aware_predictor.py  test_router_and_evaluation.py  test_routerbench.py  test_serving.py  test_store.py  test_xagent_labels.py  test_yaml_profiles.py
(+2 files in other folders)
