[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xrouter-llm"
version = "0.1.0"
description = "Prompt-aware LLM routing and fusion policy based on predicted model quality distributions."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: Other/Proprietary License"]
requires-python = ">=3.10"
dependencies = [
  "huggingface-hub>=0.23",
  "joblib>=1.3",
  "numpy>=1.24",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "scikit-learn>=1.3",
  "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[project.scripts]
xrouter-llm = "xrouter_llm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
xrouter_llm = ["resources/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
