[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xrouter-llm"
version = "0.1.0"
description = "Prompt-aware LLM routing-decision service: predicts which model can complete a prompt and picks the cheapest one."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Xorbits Inc." }]
keywords = ["llm", "router", "routing", "model-selection", "irt", "openrouter"]
classifiers = [
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
  "huggingface-hub>=0.23",
  "joblib>=1.3",
  "numpy>=1.24",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "scikit-learn>=1.3",
  "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[project.urls]
Homepage = "https://github.com/qinxuye/xrouter-llm"
Repository = "https://github.com/qinxuye/xrouter-llm"

[project.scripts]
xrouter-llm = "xrouter_llm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
xrouter_llm = [
  "resources/*.json",
  "resources/models/*.joblib",
  "resources/config/models/*.yaml",
  "resources/config/routers/*.yaml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
